--- a/styles/card.css
+++ b/styles/card.css
@@ -1,5 +1,12 @@
 .card img {
-  width: 350px;
+  height: 250px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.card-overview img {
+  height: 150px;
   display: block;
   margin-left: auto;
   margin-right: auto;
