--- a/styles/tooltip.css
+++ b/styles/tooltip.css
@@ -30,6 +30,33 @@
   opacity: 1;
 }
 
+.tooltip .tooltiptext2 {
+  visibility: hidden;
+  background-color: #555;
+  color: #fff;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  top: 125%;
+  left: 50%;
+  margin-left: -60px;
+  margin-top: -265px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltip .tooltiptext2::after {
+  content: "";
+  position: absolute;
+  border-style: solid;
+}
+
+.tooltip:hover .tooltiptext2 {
+  visibility: visible;
+  opacity: 1;
+}
+
 .editor {
   width: 550px;
   height: 250px;
