--- a/styles/card.css
+++ b/styles/card.css
@@ -11,3 +11,11 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.ql-video {
+  padding-top: 30px;
+  width: 80%;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+}
